maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:8: error: not found: value estFaceMur
      case a == 1 && !estFaceMur()=> avance() 
                      ^RandomMouseMaze:8: error: not found: value &&
      case a == 1 && !estFaceMur()=> avance() 
                  ^RandomMouseMaze:8: error: not found: value ==
      case a == 1 && !estFaceMur()=> avance() 
             ^RandomMouseMaze:8: error: not found: value !
      case a == 1 && !estFaceMur()=> avance() 
                     ^RandomMouseMaze:8: error: type mismatch;
 found   : Unit
 required: Int
      case a == 1 && !estFaceMur()=> avance() 
                                           ^RandomMouseMaze:9: error: not found: value ==
      case a == 2 => droite()
             ^RandomMouseMaze:9: error: type mismatch;
 found   : Unit
 required: Int
      case a == 2 => droite()
                           ^RandomMouseMaze:10: error: not found: value ==
      case a == 3 => gauche()
             ^RandomMouseMaze:10: error: type mismatch;
 found   : Unit
 required: Int
      case a == 3 => gauche()
                           ^