maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here 
  var a = random3()
  do{
    a = random3()
    match {
      case a == 1 && !estFaceMur()=> avance() 
      case a == 2 => droite()
      case a == 3 => gauche()
    }
  }while (estSurBiscuit() == false)
  prendBiscuit()
}